JC-1594 Fixed css for list when it's aligned by center

--- a/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/editor.css
+++ b/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/editor.css
@@ -148,6 +148,7 @@ blockquote:after {
 
 .list li {
     padding: 3px 0;
+    list-style-position:inside;
 }
 
 .unordered-list {
